# ibus-rs

ibus/: Cargo.toml  Gir.toml
ibus/src/: bus.rs  component.rs  emoji_data.rs  engine_desc.rs  ibus.rs  input_context.rs  keys.rs  lib.rs  lookup_table.rs  observed_path.rs  prelude.rs  registry.rs  xml.rs
ibus/src/auto/: attr_list.rs  attribute.rs  bus.rs  component.rs  config.rs  config_service.rs  constants.rs  emoji_data.rs  engine.rs  engine_desc.rs  engine_simple.rs  enums.rs  extension_event.rs  factory.rs  flags.rs  functions.rs  hotkey_profile.rs  input_context.rs  keymap.rs  lookup_table.rs  mod.rs  object.rs  observed_path.rs  panel_service.rs  prop_list.rs  property.rs  proxy.rs  registry.rs  serializable.rs  service.rs  text.rs  unicode_block.rs  unicode_data.rs  versions.txt  xevent.rs  xml.rs
ibus/sys/: Cargo.toml  Gir.toml  build.rs
ibus/sys/src/: lib.rs
ibus/sys/src/auto/: versions.txt
ibus/sys/tests/: abi.rs  constant.c  layout.c  manual.h
