[package]
name = "ibus"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.ffi]
package = "ibus-sys"
path = "./sys/"

[dependencies.glib]
package = "glib"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
package = "gio"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[features]
v1_5_3 = ["ffi/v1_5_3"]
v1_5_4 = ["ffi/v1_5_4", "v1_5_3"]
v1_5_18 = ["ffi/v1_5_18", "v1_5_4"]
dox = ["glib/dox", "gobject/dox", "gio/dox", "ffi/dox"]

