[package]
name = "ibus-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.ibus_1_0]
name = "ibus-1.0"
version = "1"

[package.metadata.system-deps.ibus_1_0.v1_5_3]
version = "1.5.3"

[package.metadata.system-deps.ibus_1_0.v1_5_4]
version = "1.5.4"

[package.metadata.system-deps.ibus_1_0.v1_5_18]
version = "1.5.18"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "ibus_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_5_3 = []
v1_5_4 = ["v1_5_3"]
v1_5_18 = ["v1_5_4"]
dox = ["glib/dox", "gobject/dox", "gio/dox"]
